Ocober now spelled correctly

--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
             <ul>
                 <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
                 <li>January 2016 -- Grace Hopper Academy opens in New York City</li>
-                <li>October 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
+                <li>Ocober 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
                     <ul><li>(the first building at an American service school named for a woman)</li></ul>
                 <li>November 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
                 <li>July 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
